# hlslkit

./: .pre-commit-config.yaml  .prettierrc  404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_coverage_analysis.md
.devcontainer/: devcontainer.json
.github/actions/buffer-scan/: action.yml
.github/actions/setup-hlslkit/: action.yml
.github/actions/shader-compile-test/: action.yml
.github/instructions/: copilot-instructions.md
.github/workflows/: main.yml  on-release-main.yml
CONTRIBUTING/: index.html
docs/: index.md  modules.md
hlslkit/: buffer_scan.py  compile_shaders.py  generate_shader_defines.py  include_graph.py
modules/: index.html
search/: search_index.json
tests/: test_buffer_scan.py  test_buffer_scan_errors.py  test_buffer_scan_file_processing.py  test_buffer_scan_scanner.py  test_buffer_scan_struct_analysis.py  test_buffer_scan_utils.py  test_compile_shaders.py  test_compile_shaders_cli.py  test_compile_shaders_core.py  test_compile_shaders_errors.py  test_compile_shaders_handlers.py  test_compile_shaders_includes.py  test_compile_shaders_utils.py  test_compile_shaders_validation.py  test_generate_shader_defines.py  test_generate_shader_defines_errors.py  test_generate_shader_defines_utils.py  test_include_graph.py
